Feat: gitignore에 cloud functions 관련 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,8 @@ iOSInjectionProject/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,swift,xcode,cocoapods
 
+firebase.json
+
+functions/
+
+.firebaserc
