Chore: gitignore 파이어베이스 관련 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,15 @@ functions/
 Config.xcconfig
 
 GoogleService-Info.plist
+
+firestore-debug
+
+firestore.indexes
+
+firestore.rules
+
+package-lock
+
+package
+
+ui-debug
