Refactor: 스토리보드 추가

--- a/WeClimb/App/Info.plist
+++ b/WeClimb/App/Info.plist
@@ -2,18 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Pretenard-Black.otf</string>
-		<string>Pretenard-Bold.otf</string>
-		<string>Pretenard-ExtraBold.otf</string>
-		<string>Pretenard-ExtraLight.otf</string>
-		<string>Pretenard-Light.otf</string>
-		<string>Pretenard-Medium.otf </string>
-		<string>Pretenard-Regular.otf</string>
-		<string>Pretenard-SemiBold.otf</string>
-		<string>Pretenard-Thin.otf</string>
-	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen.storyboard</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -45,6 +35,26 @@
 			</array>
 		</dict>
 	</array>
+	<key>KAKAO_NATIVE_APP_KEY</key>
+	<string>${KAKAO_NATIVE_APP_KEY}</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+		<string>kakaoplus</string>
+	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Pretenard-Black.otf</string>
+		<string>Pretenard-Bold.otf</string>
+		<string>Pretenard-ExtraBold.otf</string>
+		<string>Pretenard-ExtraLight.otf</string>
+		<string>Pretenard-Light.otf</string>
+		<string>Pretenard-Medium.otf </string>
+		<string>Pretenard-Regular.otf</string>
+		<string>Pretenard-SemiBold.otf</string>
+		<string>Pretenard-Thin.otf</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -62,13 +72,5 @@
 			</array>
 		</dict>
 	</dict>
-	<key>KAKAO_NATIVE_APP_KEY</key>
-	<string>${KAKAO_NATIVE_APP_KEY}</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>kakaokompassauth</string>
-		<string>kakaolink</string>
-		<string>kakaoplus</string>
-	</array>
 </dict>
 </plist>
