Feat : 커스텀 이미지 추가, BaseCoordinator 생성, 네임스페이스 분리

--- a/WeClimb/App/Info.plist
+++ b/WeClimb/App/Info.plist
@@ -45,15 +45,15 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Pretenard-Black.otf</string>
-		<string>Pretenard-Bold.otf</string>
-		<string>Pretenard-ExtraBold.otf</string>
-		<string>Pretenard-ExtraLight.otf</string>
-		<string>Pretenard-Light.otf</string>
-		<string>Pretenard-Medium.otf </string>
-		<string>Pretenard-Regular.otf</string>
-		<string>Pretenard-SemiBold.otf</string>
-		<string>Pretenard-Thin.otf</string>
+		<string>Pretendard-Black.otf</string>
+		<string>Pretendard-Bold.otf</string>
+		<string>Pretendard-ExtraBold.otf</string>
+		<string>Pretendard-ExtraLight.otf</string>
+		<string>Pretendard-Light.otf</string>
+		<string>Pretendard-Medium.otf </string>
+		<string>Pretendard-Regular.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
+		<string>Pretendard-Thin.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
